--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
 				
 				
 				</div>
-<div class="para2"><h2 id="2"><u><i>Academics</i></u><img src="images/book.png" alt="My picture" width="40" height="40" class="pic"/></h2>
+<div class="para2"><h2 id="2"><u><i>Academics</i></u><img src="images/book.png" alt="My picture" width="40" height="40" class="pic" style="top:-35px"/></h2>
 				<p>&nbsp &nbsp &nbsp &nbsp <i>Currently I am undergraduate student at IIT Kharagpur and pursuing my B.Tech from here. I studied my 10th & +2 level from Jhansi.The name of the school is Sheerwood college.The school is affiliated to CBSE
 				<br/>
 				* I secured 9.8 CGPA in class 10th.<br/>
@@ -79,7 +79,7 @@
 				</i>
         				</p>
 </div>
-<div class="para" style="top:280px"><h2 id="3">&nbsp <u><i>Hobbies</i></u><img src="images/hob.jpg" alt="My picture" width="40" height="40" class="pic" style="top:4px"/></h2>
+<div class="para" style="top:280px;"><h2 id="3">&nbsp <u><i>Hobbies</i></u><img src="images/hob.jpg" alt="My picture" width="40" height="40" class="pic" style="top:-30px"/></h2>
 				<p ><i>&nbsp&nbspI have a plethora of desires and passion for whom I am struggling.<br/>
 				* I love to write on topics of my interest.<br/>
 				* Web-designing and Robotics are the field which enamoure me to work harder.<br/>
