--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8"/>
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<title>Rishi's portfolio page  </title>
-		  <link rel="icon" href="sf.jpg"  type="sf/jpg" width="10" height="10"/>
+		  <link rel="icon" href="images/sf.jpg"  type="sf/jpg" width="10" height="10"/>
 		    <link href="http://fonts.googleapis.com/css?family=FONTNAME" rel="stylesheet" type="text/css" />
 		      <link rel="stylesheet" href="externalSF.css"/>
 				</head>
@@ -13,7 +13,7 @@
 			<body>
 <div class="container">
           <header>
-		<div class="my"><img src="mine.png" alt="My picture" width="250" height="600 class="pic"/></div>
+		<div class="my"><img src="images/mine.png" alt="My picture" width="250" height="600 class="pic"/></div>
 	  <nav class="top_bar">
 	<ul>
     <li><a href="">Home</a></li>
