--- a/cont.html
+++ b/cont.html
@@ -128,7 +128,7 @@ padding:0px 0px 5px 0px;
    <ul>
         <li><a href="https://en-gb.facebook.com/login/"><img src="images/fb.png" alt="fb" style="width:50px;height:50px;border:0;"/></a></li>
         <li><a href="https://twitter.com/login"><img src="images/twiiter.png" alt="twitter" style="width:50px;height:50px;border:0;"/></a></li>
-        <li><a href="https://www.google.com/gmail/"><img src="images/Gmail.png" alt="Gmail" style="width:50px;height:50px;border:0;"/></a></li>
+        <li><a href="https://www.google.com/gmail/"><img src="images/gmail.png" alt="Gmail" style="width:50px;height:50px;border:0;"/></a></li>
         <li><a href="https://www.instagram.com/?hl=en"><img src="images/intsu.png" alt="insta" style="width:50px;height:50px;border:0;"/></a></li>
         <li><a href="https://github.com/"><img src="images/git.png" alt="git" style="width:60px;height:60px;border:0;"/></a></li>
     </ul>
