--- a/cont.html
+++ b/cont.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8"/>
 <title>Contact page</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" href="sf.jpg"  type="sf/jpg" width="10" height="10"/>
+<link rel="icon" href="images/sf.jpg"  type="sf/jpg" width="10" height="10"/>
   <link rel="stylesheet" type="text/css" href="style.css">
 <style>
 
