--- a/cont.html
+++ b/cont.html
@@ -77,6 +77,9 @@ input[type=submit]:hover {
     background-color: gray;
 	opacity:.8;
 }
+	::-moz-placeholder { 
+  color: pink;
+}
 
 
 .container {
