--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		<div class="my"><img src="images/mine.png" alt="My picture" width="250" height="600 class="pic"/></div>
 	  <nav class="top_bar">
 	<ul>
-    <li><a href="">Home</a></li>
-	<li><a href="about.html">About me :-)</a> </li>
+    <li><a href="fbb.html">Assignment-2</a></li>
+	<li><a href="about.html">About</a> </li>
 	<li><a href="cont.html">Contact</a> </li>
 	<li><a href="add.html">Address</a></li>
 	
