--- a/fbb.html
+++ b/fbb.html
@@ -15,7 +15,7 @@
 	
 	 <div id="container">
 	   <header>
-    <img src="logo.png" id="logosf" alt="My picture" width="250" height="46" class="pic"/>
+    <img src="images/logo.png" id="logosf" alt="My picture" width="250" height="46" class="pic"/>
 	<div class="login">
 		<table class="table1">
 			<tr class="label">
@@ -44,7 +44,7 @@
 		</div>
 
 		<div class="world">
-			<img src="world.png">
+			<img src="images/world.png">
 		</div>
         </div>
 
