--- a/New folder/puz.html
+++ b/New folder/puz.html
@@ -1,10 +1,10 @@
 <HTML>
 	<HEAD>
 		<TITLE> Let"s play the Game !! </TITLE>
-		<link rel = "stylesheet" href = "pagesheet.css" rel="stylesheet" type = "text/css">
+		<link rel = "stylesheet" href = "New folder/pagesheet.css" rel="stylesheet" type = "text/css">
 	    <link rel="icon" href="images/sf.jpg"  type="sf/jpg" width="10" height="10"/>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-		<script src = "myfunction.js"></script>
+		<script src = "New folder/myfunction.js"></script>
 	</HEAD>
 	<BODY onload = "my_game()" id = "body">
 		
