--- a/game.html
+++ b/game.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<link rel="stylesheet" href="sty.css"/>
+<link rel="stylesheet" href="New folder/sty.css"/>
  <link rel="icon" href="images/sf.jpg"  type="sf/jpg" width="10" height="10"/>
  		    <link href="http://fonts.googleapis.com/css?family=FONTNAME" rel="stylesheet" type="text/css" />
 			 
@@ -57,13 +57,13 @@ jQuery(document).ready(function($){
 </script>
 <div class="center-outer">
 <div class="center-inner">
-<marquee behaviour="scroll"><span class="marquee"><img src="fish.png" alt="My picture" width="80" height="110 class="marquee"/></span></marquee>
+<marquee behaviour="scroll"><span class="marquee"><img src="images/fish.png" alt="My picture" width="80" height="110 class="marquee"/></span></marquee>
 
 <div class="bubbles">
 
 <h1>Memory Game</br>for</br><script>document.write(user);</script> !! </h1>
 </div>
-<marquee behaviour="scroll" direction="right"><span class="marquee"><img src="fish4.png" alt="fish" width="120" height="150 class="marquee"/></span></marquee>
+<marquee behaviour="scroll" direction="right"><span class="marquee"><img src="images/fish4.png" alt="fish" width="120" height="150 class="marquee"/></span></marquee>
 </div>
 </div>
 <div class="side">
