--- a/final/assign3.html
+++ b/final/assign3.html
@@ -1,13 +1,13 @@
 <HTML>
 	<HEAD>
 		<title> Let"s play the Game !! </title>
-		<link rel = 'stylesheet' href = 'pit.css' type = 'text/css'>
+		<link rel = 'stylesheet' href = 'final/pit.css' type = 'text/css'>
 		 <link rel="icon" href="images/sf.jpg"  type="sf/jpg" width="10" height="10"/>
 		 <link href='https://fonts.googleapis.com/css?family=Open+Sans:600,700' rel='stylesheet' type='text/css'>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<link href='https://fonts.googleapis.com/css?family=Calligraffitti' rel='stylesheet'>
 		<link href='https://fonts.googleapis.com/css?family=CarterOne' rel='stylesheet'>
-		<script src = 'jscript.js'></script>
+		<script src = 'final/jscript.js'></script>
 		<style>
 		
 		*, *:after, *:before {
