--- a/game.html
+++ b/game.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<link rel="stylesheet" href="New folder/sty.css"/>
+<link rel="stylesheet" href="final/sty.css"/>
  <link rel="icon" href="images/sf.jpg"  type="sf/jpg" width="10" height="10"/>
  		    <link href="http://fonts.googleapis.com/css?family=FONTNAME" rel="stylesheet" type="text/css" />
 			 
