--- a/game.html
+++ b/game.html
@@ -67,7 +67,7 @@ jQuery(document).ready(function($){
 </div>
 </div>
 <div class="side">
-<h2 id="one"><a href="assign3.html">New Game</a></h2>
+<h2 id="one"><a href="final/assign3.html">New Game</a></h2>
 <h2 id="two" ><a href="">Music</a></h2><!--Not working as expected.Still to do-->
 <h2 id="three"><a href="https://rishikraj.github.io/">About developer</a></h2>
 </div>
