--- a/final/assign3.html
+++ b/final/assign3.html
@@ -241,7 +241,7 @@ body {
 </div>
 
 <div class="wrap">	
-   <button class="clicker"><a style="color:blue;" href="../game.html">Back</a></button>
+   <button class="clicker"><a style="color:blue;" href="https://rishikraj.github.io/game.html">Back</a></button>
     <div class="circle angled"></div>
 </div>
         </div>
