--- a/bday.html
+++ b/bday.html
@@ -313,7 +313,8 @@
                 window.parent.postMessage('resize', "*");
             }
         </script>
-		<>
+		<img src='42.jpg'>
+		<img src='43.jpg'>
     
-
+<footer>By your Cartoon bhai </footer>
 </body></html>
