--- a/bday.html
+++ b/bday.html
@@ -313,8 +313,8 @@
                 window.parent.postMessage('resize', "*");
             }
         </script>
-		<img src='42.jpg'>
-		<img src='43.jpg'>
-    
+		<img src='42.jpeg'>
+		<img src='43.jpeg'>
+    </br>
 <footer>By your Cartoon bhai </footer>
 </body></html>
