--- a/bday.html
+++ b/bday.html
@@ -269,6 +269,8 @@
                 color: white;
                 font-size: 3.5em;
             }
+		footer{
+		color:white;}
         </style>
         <script>
             window.open = function() {};
@@ -302,7 +304,7 @@
                 <div><span>!</span>
                 </div>
             </div>
-             <h1>Cute si Didi</h1>
+             <h1>To my Cute si Didi</h1>
 
         </div>
         <script>
@@ -316,5 +318,5 @@
 		<img src='42.jpeg'/>
 		<img src='43.jpeg'/>
     </br>
-<footer>By your Cartoon Bhai </footer>
+<footer>By your Cartoon Bhai.....</footer>
 </body></html>
