--- a/bday.html
+++ b/bday.html
@@ -270,7 +270,8 @@
                 font-size: 3.5em;
             }
 		footer {
-		color:white; }
+		color:white;
+		font-size:2.1em;}
 		
         </style>
         <script>
