--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>Rishi's portfolio page  </title>
 		  <link rel="icon" href="images/sf.jpg"  type="sf/jpg" width="10" height="10"/>
 		    <link href="http://fonts.googleapis.com/css?family=FONTNAME" rel="stylesheet" type="text/css" />
-		      <link rel="stylesheet" href="externalSF.css"/>
+		      <link rel="stylesheet" href="older/externalSF.css"/>
 				</head>
 			  
 			  
@@ -16,10 +16,10 @@
 		<div class="my"><img src="images/mine.png" alt="My picture" width="250" height="600 class="pic"/></div>
 	  <nav class="top_bar">
 	<ul>
-    <li><a href="fbb.html">Assignment-2</a></li>
-	<li><a href="about.html">About</a> </li>
-	<li><a href="cont.html">Contact</a> </li>
-	<li><a href="add.html">Address</a></li>
+    <li><a href="older/fbb.html">Assignment-2</a></li>
+	<li><a href="older/about.html">About</a> </li>
+	<li><a href="older/cont.html">Contact</a> </li>
+	<li><a href="older/add.html">Address</a></li>
 	
 	</ul>
       </nav>
