--- a/older/about.html
+++ b/older/about.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8"/>
 <title>About Rishi</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" href="images/sf.jpg"  type="sf/jpg" width="10" height="10"/>
+<link rel="icon" href="../images/sf.jpg"  type="sf/jpg" width="10" height="10"/>
 <link rel="stylesheet" href="sheet.css"/>
 <style type="text/css">
 
@@ -59,7 +59,7 @@
 <br/>
 <section>
 <article>
-<div class="para"><h2 id="1">&nbsp <u><i>Basic Intro</i></u><br/><img src="images/home.jpg" alt="My picture" width="40" height="40" class="pic"/></h2>
+<div class="para"><h2 id="1">&nbsp <u><i>Basic Intro</i></u><br/><img src="../images/home.jpg" alt="My picture" width="40" height="40" class="pic"/></h2>
 				<p><i>&nbsp&nbspHi, my name is Rishi kant rajpoot and I am 19 year old. I belong to <a href="https://en.wikipedia.org/wiki/Jhansi">Jhansi</a> a district in Uttarpradesh. I have a very sweet family consisting only 3 members
 				I,my mom and dad. This is my portfolio webpage, here you can find about my academical background and also you can take a glance of my hobby list.<br/>
 				<b>Hope, you are enjoying </b> 
@@ -69,7 +69,7 @@
 				
 				
 				</div>
-<div class="para2"><h2 id="2"><u><i>Academics</i></u><img src="images/book.png" alt="My picture" width="40" height="40" class="pic" style="top:-35px"/></h2>
+<div class="para2"><h2 id="2"><u><i>Academics</i></u><img src="../images/book.png" alt="My picture" width="40" height="40" class="pic" style="top:-35px"/></h2>
 				<p>&nbsp &nbsp &nbsp &nbsp <i>Currently I am undergraduate student at IIT Kharagpur and pursuing my B.Tech from here. I studied my 10th & +2 level from Jhansi.The name of the school is Sheerwood college.The school is affiliated to CBSE
 				<br/>
 				* I secured 9.8 CGPA in class 10th.<br/>
@@ -79,7 +79,7 @@
 				</i>
         				</p>
 </div>
-<div class="para" style="top:280px;"><h2 id="3">&nbsp <u><i>Hobbies</i></u><img src="images/hob.jpg" alt="My picture" width="40" height="40" class="pic" style="top:-30px"/></h2>
+<div class="para" style="top:280px;"><h2 id="3">&nbsp <u><i>Hobbies</i></u><img src="../images/hob.jpg" alt="My picture" width="40" height="40" class="pic" style="top:-30px"/></h2>
 				<p ><i>&nbsp&nbspI have a plethora of desires and passion for whom I am struggling.<br/>
 				* I love to write on topics of my interest.<br/>
 				* Web-designing and Robotics are the field which enamoure me to work harder.<br/>
