--- a/older/cont.html
+++ b/older/cont.html
@@ -4,12 +4,12 @@
 <meta charset="utf-8"/>
 <title>Contact page</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" href="images/sf.jpg"  type="sf/jpg" width="10" height="10"/>
+<link rel="icon" href="../images/sf.jpg"  type="sf/jpg" width="10" height="10"/>
   <link rel="stylesheet" type="text/css" href="style.css">
 <style>
 
 body {
-    background-image:url(images/bg8.jpg);
+    background-image:url(../images/bg8.jpg);
     background-attachment: fixed;
     background-size:cover;                      
     background-repeat: no-repeat;
@@ -129,11 +129,11 @@ padding:0px 0px 5px 0px;
    </form>
    <aside id="social">
    <ul>
-        <li><a href="https://en-gb.facebook.com/login/"><img src="images/fb.png" alt="fb" style="width:50px;height:50px;border:0;"/></a></li>
-        <li><a href="https://twitter.com/login"><img src="images/twiiter.png" alt="twitter" style="width:50px;height:50px;border:0;"/></a></li>
-        <li><a href="https://www.google.com/gmail/"><img src="images/gmail.png" alt="Gmail" style="width:50px;height:50px;border:0;"/></a></li>
-        <li><a href="https://www.instagram.com/?hl=en"><img src="images/intsu.png" alt="insta" style="width:50px;height:50px;border:0;"/></a></li>
-        <li><a href="https://github.com/"><img src="images/git.png" alt="git" style="width:60px;height:60px;border:0;"/></a></li>
+        <li><a href="https://en-gb.facebook.com/login/"><img src="../images/fb.png" alt="fb" style="width:50px;height:50px;border:0;"/></a></li>
+        <li><a href="https://twitter.com/login"><img src="../images/twiiter.png" alt="twitter" style="width:50px;height:50px;border:0;"/></a></li>
+        <li><a href="https://www.google.com/gmail/"><img src="../images/gmail.png" alt="Gmail" style="width:50px;height:50px;border:0;"/></a></li>
+        <li><a href="https://www.instagram.com/?hl=en"><img src="../images/intsu.png" alt="insta" style="width:50px;height:50px;border:0;"/></a></li>
+        <li><a href="https://github.com/"><img src="../images/git.png" alt="git" style="width:60px;height:60px;border:0;"/></a></li>
     </ul>
    
    
