--- a/older/add.html
+++ b/older/add.html
@@ -5,7 +5,7 @@
 <title>Location</title>
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<title>Rishi's portfolio page  </title>
-		  <link rel="icon" href="images/sf.jpg"  type="sf/jpg" width="10" height="10"/>
+		  <link rel="icon" href="../images/sf.jpg"  type="sf/jpg" width="10" height="10"/>
 		  <title>Address</title>
 		  <style type="text/css">
 		  body{ background-attachment: fixed;
@@ -59,7 +59,7 @@ font-size:28px;
 text-align:center;
 }
 #art section h3{
- background-image:url(images/map.png);
+ background-image:url(../images/map.png);
  max-width:90%;
  height:450px;
  margin-left:60px;
