--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 	
 <head>
-<title>Social Icons</title>
+<title>Home page</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Flat Social Icons,icon hover effects,,Elements"./>
@@ -396,36 +396,36 @@ color: #fff;
 			<h1>Flat-Social-Icons</h1>
 			<div class="icons-section">
 			<div class="left-icons">
-				 <div class="fb"><a href="#"><span> </span> <lable>Facebook ile bağlan</lable>
+				 <div class="fb"><a href="https://rishikraj.github.io/assign-1/"><span> </span> <lable>Assignment-1</lable>
 				 	<div class="clear"></div></a>
 				</div>
-				<div class="linkedin"><a href="#"><span> </span> <lable>LınkedIn ile bağlan</lable>
+				<div class="linkedin"><a href="https://rishikraj.github.io/assign-2/"><span> </span> <lable>Assignment-2</lable>
 				 	<div class="clear"></div></a>
 				</div>
-				<div class="tumblr"><a href="#"><span> </span> <lable>Tumblr ile bağlan</lable>
+				<div class="tumblr"><a href="https://rishikraj.github.io/assign-3/"><span> </span> <lable>Assignment-3</lable>
 				 	<div class="clear"></div></a>
 				</div>
-				<div class="space"><a href="#"><span> </span> <lable>My Space ile bağlan</lable>
+				<div class="space"><a href="https://rishikraj.github.io/assign-4/"><span> </span> <lable>Assignment-4</lable>
 				 	<div class="clear"></div></a>
 				</div>
-				<div class="delicious"><a href="#"><span> </span> <lable>Delicious ile bağlan</lable>
+				<div class="delicious"><a href="#"><span> </span> <lable>Assignment-5</lable>
 				 	<div class="clear"></div></a>
 				</div>
 			</div>
 			<div class="right-icons">
-				 <div class="email"><a href="#"><span> </span> <lable>Email ile kaydol</lable>
+				 <div class="email"><a href="https://www.researchgate.net/project/Illumination-Mapping-of-an-open-cast-mine-using-wireless-systems"><span> </span> <lable>Project-1</lable>
 				 	<div class="clear"></div></a>
 				</div>
-				<div class="google"><a href="#"><span> </span> <lable>Google+ ile bağlan</lable>
+				<div class="google"><a href="https://github.com/rishikraj/chromeauto"><span> </span> <lable>Project-2</lable>
 				 	<div class="clear"></div></a>
 				</div>
-				<div class="twitter"><a href="#"><span> </span> <lable>Twitter ile bağlan</lable>
+				<div class="twitter"><a href="https://github.com/rishikraj/UGmonitoring"><span> </span> <lable>Project-3</lable>
 				 	<div class="clear"></div></a>
 				</div>
-				<div class="flicker"><a href="#"><span> </span> <lable>Flicker ile bağlan</lable>
+				<div class="flicker"><a href="https://github.com/rishikraj/Man-Machine-Interaction_Safety"><span> </span> <lable>Project-4</lable>
 				 	<div class="clear"></div></a>
 				</div>
-				<div class="github"><a href="#"><span> </span> <lable>Github ile bağlan</lable>
+				<div class="github"><a href="#"><span> </span> <lable>Project-5</lable>
 				 	<div class="clear"></div></a>
 				</div>
 			</div>
