--- a/index.html
+++ b/index.html
@@ -388,7 +388,8 @@ color: #fff;
     </style>
 </head>
 <body>
-
+<p> Some of my works ranging from beginner to intermediate level are listed here. To see some advanced stuff in detail PM me.
+</p>	
 
 
  	<div class="Flat-social-icons">
