--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@ color: #fff;
     </style>
 </head>
 <body>
-<h2 style="color:"> Some of my works ranging from beginner to intermediate level are listed here. To see some advanced stuff in detail PM me.
+<h2 style="color:"> Some of my works ranging from beginner to intermediate level are listed here. Wanna see some advanced stuff in detail, ping me.
 </h2>	
 
 
